<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_spotify_streamer_button_name">Spotify Streamer</string>
    <string name="main_scores_app_button_name">Scores App</string>
    <string name="main_library_app_button_name">Library App</string>
    <string name="main_build_it_bigger_button_name">Build It Bigger</string>
    <string name="main_xyz_reader_button_name">XYZ Reader</string>
    <string name="main_capstone_my_own_app_button_name">Capstone My Own App</string>
    <string name="main_my_nanodegree_apps_text">My Nanodegree Apps!</string>
</resources>
