<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center|top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_my_nanodegree_apps_text"
        android:layout_width="500dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/main_my_nanodegree_apps_text"
        android:gravity="center"
        android:textSize="22dp"
        android:textColor="@color/title_blue"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/main_spotify_streamer_button_name"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/main_spotify_streamer_button_name"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/orange"
        />

    <Button
        android:id="@+id/main_scores_app_button_name"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/main_scores_app_button_name"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/orange"
        />

    <Button
        android:id="@+id/main_library_app_button_name"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/main_library_app_button_name"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/orange"
        />

    <Button
        android:id="@+id/main_build_it_bigger_button_name"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/main_build_it_bigger_button_name"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/orange"
        />

    <Button
        android:id="@+id/main_xyz_reader_button_name"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/main_xyz_reader_button_name"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/orange"
        />

    <Button
        android:id="@+id/main_capstone_my_own_app_button_name"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/main_capstone_my_own_app_button_name"
        android:textColor="@color/white"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/red"
        />

</LinearLayout>
